Fixed gaps on nav open and scroll

--- a/src/scss/base/_actions.scss
+++ b/src/scss/base/_actions.scss
@@ -5,3 +5,7 @@
     background: $header-bg;
   }
 }
+
+html:has(.header__burger--squeeze.is-active) {
+  overflow: hidden;
+}
